# mle-training

./: .flake8  .gitignore  Dockerfile  Housing_3.1.3.ipynb  README.md  entrypoint.sh  env.yaml  nonstandardcode.py  pyproject.toml  running_the_package.py
.github/workflows/: 2.1_ci-in-github-workflow.yaml  2.2_python-packaging-workflow.yaml  2.3_testing-python-code.yaml  2.4_refactoring-code.yaml  2.5_unit-testing-workflow.yaml  2.6_workflow-scripts.yaml  2.7_logging.yaml  2.8_documentation.yaml  4.2_build-and-push-image-to-hub.yaml  4.3_pull-and-run-docker-image.yaml
doc_files/: conf.py  index.rst
notebooks/: Housing_3.1.1.ipynb  Housing_3.1.2.ipynb
src/house_price_prediction/: data_ingestion.py  main.py  nonstandardcode.py
src/house_price_prediction.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/house_price_prediction/data_ingestion_package/: data_ingestion.py
src/house_price_prediction/scoring_package/: scoring.py
src/house_price_prediction/training_package/: training.py
src/scripts/: config_logging.py  ingest_data.py  main_script.py  score.py  train.py
tests/: test_functionality.py  test_imports.py  test_nonstandardcode.py
