[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "house_price_prediction"
version = "0.1.0"
description = "This package contains the logic for house price prediction."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[project.authors]
name = "prithivee"
email = "prithivee.r@tigeranalytics.com"

[project.dependencies]
dependencies = [
                "black>=24.1.0", "flake8>=7.0.0", "isort>=5.9.3", "matplotlib>=3.8.4",
                "numpy>=1.26.4", "pandas>=2.2.1","scikit-learn>=1.4.2",
                "scipy>=1.13.0", "six>=1.16.0"
                ]

[tool.hatch.build.targets.sdist.include]
paths = ["src"]

[tool.hatch.build.targets.wheel.include]
paths = ["src"]

[tool.isort]
profile = "black"

[tool.black]
skip-string-normalization = true
line-length = 88

